--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+	<title>Главная</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн-курсе «<a href="https://htmlacademy.ru/advanced_intensive">Продвинутый HTML и CSS</a>».</p>
-
+  	<header>
+  		<nav>
+  			<ul>
+  				<li>
+  					<a href="#">Информация</a>
+  					<a class="btn-close" href="#"><img src=""></a>
+  				</li>
+  				<li>
+  					<a href="#">Оставить отзыв</a>
+  				</li>
+  				<li>
+  					<a href="#">Блог шерифа</a>
+  				</li>
+  				<li>
+  					<a href="#">Гостиницы</a>
+  				</li>
+  			</ul>
+  		</nav>
+  	</header>
+		<div class="center-wrapper">
+			<div class="subnavigation">
+				<div class="logo"><a href="index.html"><img src="#"></a></div>
+				<div class="submenu"><a href="#"><img src="#"></a></div>				
+			</div>
+				<img href="img-greeting" src="#" alt="">
+				<div class="text-block">
+					<div class="title-block">Седона - небольшой городок в Аризоне, заслуживающий большего!</div>
+					<div class="body-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</div>
+				</div>
+				<div class="reason color-reason">
+				  <p>Настоящий городок</p>
+				  <p>№1</p>
+				  <p>Седона не аттракцион для туристов, там течет своя жизнь</p>					
+				</div>	
+				<img class="img-reason" src="#">
+				<div class="advantages">
+					<div class="advantage">
+						<div class="img-advantage"><img src="#"></div>
+						<div class="text-advantage">
+							<div class="title-block">Жилье</div>
+							<div class="body-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>	
+						</div>
+					</div>
+					<div class="advantage">
+						<div class="img-advantage"><img src="#"></div>
+						<div class="text-advantage">
+							<div class="title-block">Еда</div>
+							<div class="body-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>	
+						</div>
+					</div>
+					<div class="advantage">
+						<div class="img-advantage"><img src="#"></div>
+						<div class="text-advantage">
+							<div class="title-block">Сувениры</div>
+							<div class="body-text">Не только китайского, но и местного производства!</div>	
+						</div>
+					</div>
+				</div>
+				<div class="reason color-reason">
+				  <pТам есть мост дъявола</p>
+				  <p>№2</p>
+				  <p>Да! по нему можно пройти! если, конечно, вы осмелитесь</p>					
+				</div>	
+				<img class="img-reason" src="#">
+				<div class="reason colorless-reason">
+				  <p>Небольшая площадь</p>
+				  <p>№3</p>
+				  <p>Все достопримечательности находятся очень близко</p>			
+				</div>	
+				<div class="reason colorless-reason">
+				  <p>Красивая дорога</p>
+				  <p>№4</p>
+				  <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+				</div>	
+				<div class="reason colorless-reason">
+				  <p>Мало туристов</p>
+				  <p>№5</p>
+				  <p>Большинство едет в Гранд Каньон и толпится там.</p>
+				</div>
+				<div class="text-block">
+					<div class="title-block text-strong">Заинтересовались?</div>
+					<div class="body-text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</div>
+				</div>	
+        <p><a href="#" class="search-hotel">Найти гостиницу</a></p>
+				<div class="map"></div>
+		</div>
+		<footer>
+			<div class="hashtag">#visitsedona</div>
+		  	<div class="footer-block hashtag">#visitsedona</div>
+		    <div class="footer-block social">
+		      <a href="#" class="social social-tw"><i class="icon-twitter"></i></a>
+		      <a href="#" class="social social-fb"><i class="icon-facebook"></i></a>
+		      <a href="#" class="social social-youtube"><i class="icon-youtube"></i></a>
+		    </div>
+		    <div class="footer-block copyright">
+		      Разработано <a href="#"><img src="img/logo-html-academy.png" alt="htmlacademy"></a>
+		    </div>
+		</footer>
   </body>
 </html>
