Внесены правки в файлы index.html и form.html

--- a/index.html
+++ b/index.html
@@ -1,97 +1,99 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-	<title>Главная</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Главная</title>
+  	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   </head>
   <body>
   	<header>
-  		<nav>
-  			<ul>
-  				<li>
-  					<a href="#">Информация</a>
-  					<a class="btn-close" href="#"><img src=""></a>
-  				</li>
-  				<li>
-  					<a href="#">Оставить отзыв</a>
-  				</li>
-  				<li>
-  					<a href="#">Блог шерифа</a>
-  				</li>
-  				<li>
-  					<a href="#">Гостиницы</a>
-  				</li>
-  			</ul>
-  		</nav>
-  	</header>
-		<div class="center-wrapper">
+			<nav>
+				<a class="btn-close" href="#"><img src=""></a>
+				<ul>
+					<li>
+						<a href="#">Информация</a>
+					</li>
+					<li>
+						<a href="#">Оставить отзыв</a>
+					</li>
+					<li>
+						<a href="#">Блог шерифа</a>
+					</li>
+					<li>
+						<a href="#">Гостиницы</a>
+					</li>
+				</ul>
+			</nav>
 			<div class="subnavigation">
 				<div class="logo"><a href="index.html"><img src="#"></a></div>
 				<div class="submenu"><a href="#"><img src="#"></a></div>				
 			</div>
-				<img href="img-greeting" src="#" alt="">
-				<div class="text-block">
-					<div class="title-block">Седона - небольшой городок в Аризоне, заслуживающий большего!</div>
-					<div class="body-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</div>
-				</div>
-				<div class="reason color-reason">
-				  <p>Настоящий городок</p>
-				  <p>№1</p>
+			<div class="img-sedona">
+	  		<img href="img-sedona" src="#" alt="">
+	  	</div>
+	  </header>
+	  <main>
+			<div class="center-wrapper">
+				<section class="text-block">
+					<h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+					<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+				</section>
+				<section class="reason color-reason">
+				  <div>Настоящий городок</div>
+				  <div><span>№1</span></div>
 				  <p>Седона не аттракцион для туристов, там течет своя жизнь</p>					
-				</div>	
-				<img class="img-reason" src="#">
+				</section>	
+				<div class="img-reason">
+					<img src="#">
+				</div>
 				<div class="advantages">
 					<div class="advantage">
 						<div class="img-advantage"><img src="#"></div>
-						<div class="text-advantage">
-							<div class="title-block">Жилье</div>
-							<div class="body-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>	
-						</div>
+						<div class="title-block">Жилье</div>
+						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 					</div>
 					<div class="advantage">
 						<div class="img-advantage"><img src="#"></div>
-						<div class="text-advantage">
-							<div class="title-block">Еда</div>
-							<div class="body-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>	
-						</div>
+						<div class="title-block">Еда</div>
+						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>	
 					</div>
 					<div class="advantage">
 						<div class="img-advantage"><img src="#"></div>
-						<div class="text-advantage">
-							<div class="title-block">Сувениры</div>
-							<div class="body-text">Не только китайского, но и местного производства!</div>	
-						</div>
+						<div class="title-block">Сувениры</div>
+						<p>Не только китайского, но и местного производства!</p>	
 					</div>
 				</div>
-				<div class="reason color-reason">
-				  <pТам есть мост дъявола</p>
-				  <p>№2</p>
+				<section class="reason color-reason">
+				  <div>Там есть мост дъявола</div>
+				  <div><span>№2</span></div>
 				  <p>Да! по нему можно пройти! если, конечно, вы осмелитесь</p>					
-				</div>	
-				<img class="img-reason" src="#">
-				<div class="reason colorless-reason">
-				  <p>Небольшая площадь</p>
-				  <p>№3</p>
-				  <p>Все достопримечательности находятся очень близко</p>			
-				</div>	
-				<div class="reason colorless-reason">
-				  <p>Красивая дорога</p>
-				  <p>№4</p>
-				  <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-				</div>	
-				<div class="reason colorless-reason">
-				  <p>Мало туристов</p>
-				  <p>№5</p>
-				  <p>Большинство едет в Гранд Каньон и толпится там.</p>
+				</section>
+				<div class="img-reason">
+					<img src="#">
 				</div>
+				<section class="reason colorless-reason">
+				  <div>Небольшая площадь</div>
+				  <div><span>№3</span></div>
+				  <p>Все достопримечательности находятся очень близко</p>			
+				</section>
+				<section class="reason colorless-reason">
+				  <div>Красивая дорога</div>
+				  <div><span>№4</span></div>
+				  <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+				</section>	
+				<section class="reason colorless-reason">
+				  <div>Мало туристов</div>
+				  <div><span>№5</span></div>
+				  <p>Большинство едет в Гранд Каньон и толпится там.</p>
+				</section>
 				<div class="text-block">
 					<div class="title-block text-strong">Заинтересовались?</div>
-					<div class="body-text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</div>
+					<p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 				</div>	
-        <p><a href="#" class="search-hotel">Найти гостиницу</a></p>
+        <a href="#" class="search-hotel">Найти гостиницу</a>
 				<div class="map"></div>
-		</div>
+			</div>
+		</main>
 		<footer>
 	  	<div class="footer-block hashtag">#visitsedona</div>
 	    <div class="footer-block social">
