--- a/form.html
+++ b/form.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-	<title>Гостиницы</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Гостиницы</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	</head>
 	<body>
 		<header>
 			<nav>
+				<a class="btn-close" href="#"><img src=""></a>
 				<ul>
 					<li>
 						<a href="#">Информация</a>
-						<a class="btn-close" href="#"><img src=""></a>
 					</li>
 					<li>
 						<a href="#">Оставить отзыв</a>
@@ -24,127 +24,168 @@
 					</li>
 				</ul>
 			</nav>
-	  </header>
-	  <div class="center-wrapper">
 			<div class="subnavigation">
 				<div class="logo"><a href="index.html"><img src="#"></a></div>
 				<div class="submenu"><a href="#"><img src="#"></a></div>				
 			</div>
-			<img href="img-sedona" src="#" alt="">	  
-			<div class="text-block">
-		  	<div class="title-block">Оставьте свой отзыв</div>
-		  	<div class="body-text">Помогите нашим отелям стать лучше! Оставьте свой отзыв о них, а также о посещенных вами достопримечательностях</div>
-	    </div>	
-	    <form id="review" class="review" action="#"></form>
-	    <div class="block-review">
-        <div class="block-review-title">Представьтесь, пожалуйста:</div>
-		    	<table class="table-guest">
-		    		<tr>
-		    			<td>Фамилия:<span class="highlighted">*</span></td>
-		    		</tr>
-		    		<tr>
-		    			<td><input type="text" name="surname" form="review" value="Иванов"></td>
-		    		</tr>		
-		    		<tr>
-		    			<td>Имя:<span class="highlighted">*</span></td>
-		    		</tr>
-		    		<tr>
-		    			<td><input type="text" name="first-name" form="review" value="Петр"></td>
-		    		</tr>		
-		    		<tr>
-		    			<td>Отчество:<span class="highlighted">*</span></td>
-		    		</tr>
-		    		<tr>
-		    			<td><input type="text" name="middle-name" form="review" value="Александрович"></td>
-		    		</tr>	
-		    	</table>
-	    </div>
-	    <div class="block-review">
-	    	<div class="block-review-title">Ваше общее впечатление:</div>
-				<div><input type="radio" name="impression" form="review" value="positive">Скорее положительное</div>
-				<div><input type="radio" name="impression" form="review" value="negative">Скорее отрицательное</div>
-	    </div>
-	    <div class="block-review">
-	    	<div class="block-review-title">Даты вашей поездки:</div>
-	    	<div class="question">Дата приезда:<span class="highlighted">*</span></div>
-	    	<div><input type="text" name="arrival-date" form="review" value="4 июля 2015"></div>
-	    	<div class="question">Длительность пребывания:<span class="highlighted">*</span></div>
-	    	<div class="count">
-		    	<div class="less"></div>
-		    	<div class="number-days"><input type="text" name="input-number-days" form="review" value="14"></div>	
-		    	<div class="more"></div>
-	    	</div>
-	    	<div class="question">Дата отъезда:<span class="highlighted">*</span></div>
-	    	<div><input type="text" name="departure-date" form="review" value="28 июля 2015"></div>
-	    </div>
-	    <div class="block-review">
-	    	<div class="block-review-title">Кол-во путешественников:</div>
-				<div class="question">Количество путешественников:<span class="highlighted">*</span></div>
-	    	<div class="count">
-		    	<div class="less"></div>
-		    	<div class="number-travelers"><input type="text" name="input-number-travelers" form="review" value="2"></div>	
-		    	<div class="more"></div>
-	    	</div>
-	    	<table>
-	    		<tr><td>№</td><td>Фамилия:<span class="highlighted">*</span></td></tr>
-	    		<tr><td>1</td><td><input type="text" name="surname-traveler" form="review" value="Иванов"></td></tr>
-	    		<tr><td></td><td>Имя:<span class="highlighted">*</span></td></tr>
-	    		<tr><td></td><td><input type="text" name="first-name-traveler" form="review" value="Петр"></td></tr>
-	    		<tr><td></td><td>Отчество:<span class="highlighted">*</span></td></tr>
-	    		<tr><td></td><td><input type="text" name="middle-name-traveler" form="review" value="Александрович"></td></tr>
-	    	</table>
-	    	<table>
-	    		<tr><td>№</td><td>Фамилия:<span class="highlighted">*</span></td></tr>
-	    		<tr><td>2</td><td><input type="text" name="surname-traveler" form="review" value="Иванов"></td></tr>
-	    		<tr><td></td><td>Имя:<span class="highlighted">*</span></td></tr>
-	    		<tr><td></td><td><input type="text" name="first-name-traveler" form="review" value="Петр"></td></tr>
-	    		<tr><td></td><td>Отчество:<span class="highlighted">*</span></td></tr>
-	    		<tr><td></td><td><input type="text" name="middle-name-traveler" form="review" value="Александрович"></td></tr>
-	    	</table>
-	    </div>
-	    <div class="block-review">
-	    	<div class="block-review-title">Посещенные достопримечательности:</div>
-				<div><input type="checkbox" name="attraction1" form="review" value="bridge" checked>Мост Дъявола</div>
-				<div><input type="checkbox" name="attraction2" form="review" value="park">Слайд-парк</div>
-				<div><input type="checkbox" name="attraction3" form="review" value="mountain" checked>Гора-Колокол</div>
-				<div><input type="checkbox" name="attraction4" form="review" value="rocks" checked>Красные скалы</div>
-	    </div>
-	    <div class="block-review">
-				<div class="block-review-title">Загрузите фотографии:</div>
-				<div><a class="btn-select-photos" href="#">Выбрать фотографии</a></div>
-				<div class="photos">
-					<div class="photo">
-						<img src="">
+			<div class="img-sedona">
+	  		<img href="img-sedona" src="#" alt="">
+	  	</div>
+	  </header>
+	  <main>
+		  <div class="center-wrapper">
+				<div class="text-block">
+			  		<h1>Оставьте свой отзыв</h1>
+			  		<p>
+			  			Помогите нашим отелям стать лучше! Оставьте свой отзыв о них, а также о посещенных вами достопримечательностях
+			  		</p>
+		    	</div>	
+		    <form id="review" class="review" action="#">
+		    	<fieldset>
+	       			<legend>Представьтесь, пожалуйста:</legend></div>
+			    	<div class="table-guest">
+			    		<div class="form-wrapper">
+			    			<label>Фамилия:<span class="highlighted">*</span></label>
+			    			<input type="text" name="surname" form="review" value="Иванов">
+			    		</div>
+			    		<div class="form-wrapper">
+			    			<label>Имя:<span class="highlighted">*</span></label>
+			    			<input type="text" name="first-name" form="review" value="Петр">
+			    		</div>
+			    		<div class="form-wrapper">
+			    			<label>Отчество:<span class="highlighted">*</span></label>
+			    			<input type="text" name="middle-name" form="review" value="Александрович">
+			    		</div>
+			    	</div>
+		    	</fieldset>
+		   		<fieldset>
+		    		<legend>Ваше общее впечатление:</legend>
+					<div>
+						<input type="radio" name="impression" form="review" value="positive">Скорее положительное
 					</div>
-					<div class="photo">
-						<img src="">
+					<div>
+						<input type="radio" name="impression" form="review" value="negative">Скорее отрицательное
 					</div>
-					<div class="photo">
-						<img src="">
+		    	</fieldset>
+		    	<fieldset>
+		    		<legend>Даты вашей поездки:</legend>
+		    		<div class="question">Дата приезда:<span class="highlighted">*</span></div>
+		    		<div><input type="text" name="arrival-date" form="review" value="4 июля 2015"></div>
+		    		<div class="question">Длительность пребывания:<span class="highlighted">*</span></div>
+		    		<div class="count">
+			    		<div class="less"></div>
+			    		<div class="number-days"><input type="text" name="input-number-days" form="review" value="14"></div>	
+			    		<div class="more"></div>
+		    		</div>
+		    		<div class="question">Дата отъезда:<span class="highlighted">*</span></div>
+		    		<div><input type="text" name="departure-date" form="review" value="28 июля 2015"></div>
+				</fieldset>
+				<fieldset>
+					<legend>Кол-во путешественников:</legend>
+					<div class="question">Количество путешественников:<span class="highlighted">*</span></div>
+	    		<div class="count">
+		    		<div class="less"></div>
+		    		<div class="number-travelers"><input type="text" name="input-number-travelers" form="review" value="2"></div>	
+		    		<div class="more"></div>
+	    		</div>
+	    		<div class="table-guest">
+	    			<div class="row">
+	    				<div class="col">№</div><div class="col">Фамилия:<span class="highlighted">*</span></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col">1</div><div class="col"><input type="text" name="surname-traveler" form="review" value="Иванов"></div>
+	    			</div>
+	    			<div class="row">	    			
+	    				<div class="col"></div><div class="col">Имя:<span class="highlighted">*</span></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col"></div><div class="col"><input type="text" name="first-name-traveler" form="review" value="Петр"></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col"></div><div class="col">Отчество:<span class="highlighted">*</span></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col"></div><div class="col"><input type="text" name="middle-name-traveler" form="review" value="Александрович"></div>
+	    			</div>
+	    		</div>
+	    		<div class="table-guest">
+	    			<div class="row">
+	    				<div class="col">№</div><div class="col">Фамилия:<span class="highlighted">*</span></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col">2</div><div class="col"><input type="text" name="surname-traveler" form="review" value="Иванов"></div>
+	    			</div>
+	    			<div class="row">	    			
+	    				<div class="col"></div><div class="col">Имя:<span class="highlighted">*</span></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col"></div><div class="col"><input type="text" name="first-name-traveler" form="review" value="Петр"></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col"></div><div class="col">Отчество:<span class="highlighted">*</span></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="col"></div><div class="col"><input type="text" name="middle-name-traveler" form="review" value="Александрович"></div>
+	    			</div>
+	    		</div>
+				</fieldset>
+				<fieldset>
+					<legend>Посещенные достопримечательности:</legend>
+					<div>
+						<input type="checkbox" name="attraction1" form="review" value="bridge" checked>
+						<label>Мост Дъявола</label>
 					</div>
-					<div class="photo">
-						<img src="">
+					<div>
+						<input type="checkbox" name="attraction2" form="review" value="park">
+						<label>Слайд-парк</label>
 					</div>
-					<div class="photo">
-						<img src="">
+					<div>
+						<input type="checkbox" name="attraction3" form="review" value="mountain" checked>
+						<label>Гора-Колокол</label>
 					</div>
-					<div class="photo">
-						<img src="">
+					<div>
+						<input type="checkbox" name="attraction4" form="review" value="rocks" checked>
+						<label>Красные скалы</label>
 					</div>
-					<div class="photo">
-						<img src="">
+				</fieldset>
+				<fieldset>
+					<legend>Загрузите фотографии:</legend>
+					<div><input type="file" value="Выбрать фотографии"></div>
+					<div class="photos">
+						<div class="photo">
+							<img src="">
+						</div>
+						<div class="photo">
+							<img src="">
+						</div>
+						<div class="photo">
+							<img src="">
+						</div>
+						<div class="photo">
+							<img src="">
+						</div>
+						<div class="photo">
+							<img src="">
+						</div>
+						<div class="photo">
+							<img src="">
+						</div>
+						<div class="photo">
+							<img src="">
+						</div>
 					</div>
-				</div>
-	    </div>
-      <input type="submit" value="Отправить отзыв">
+					<button type="submit" value="Отправить отзыв">
+				</fieldset>
+      </form>
 	  </div>
-		<footer>
+	</main>
+	<footer>
 	  	<div class="footer-block hashtag">#visitsedona</div>
 	    <div class="footer-block social">
-	      <a href="#" class="social social-tw"><i class="icon-twitter"></i></a>
-	      <a href="#" class="social social-fb"><i class="icon-facebook"></i></a>
-	      <a href="#" class="social social-youtube"><i class="icon-youtube"></i></a>
+	     	<a href="#" class="social social-tw"><i class="icon-twitter"></i></a>
+	     	<a href="#" class="social social-fb"><i class="icon-facebook"></i></a>
+	     	<a href="#" class="social social-youtube"><i class="icon-youtube"></i></a>
 	    </div>
-		</footer> 
+	</footer> 
 </body>
 </html>
