--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
           </li>
         </ul>
       </nav>
-      <div class="logo" class="logo">
-        <a class="logo__link" href="#">
-          <img class="logo__img" src="">
-        </a>    
+      <div class="logo">
+        <a href="#"><img src=""></a>    
       </div>
-      <a class="sub-navigation__menu" href="#">
-        <img class="sub-navigation__img-menu" src="#">
+      <a class="menu-toggle__link" href="#">
+        <img class="menu-toggle__img" src="#">
       </a>
       <div class="background-sedona">
         <img href="background-sedona__img" src="#" alt="">
@@ -40,9 +38,9 @@
     </header>
     <main class="page-main">
       <div class="page-main__center-wrapper">
-        <section class="text-block">
-          <h1 class="text-block__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-          <p class="text-block__p">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <section class="promo">
+          <h1 class="promo__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <p class="promo__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </section>
         <section class="reason reason--color">
           <div class="reason__title">Настоящий городок</div>
@@ -56,23 +54,17 @@
         </section>  
         <div class="advantages">
           <div class="advantages-item">
-            <div class="advantages-item__img-wrap">
-              <img class="advantages-item__img" src="#">
-            </div>
+            <img class="advantages-item__img" src="#">
             <div class="advantages-item__title">Жилье</div>
             <p class="advantages-item__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </div>
           <div class="advantages-item">
-            <div class="advantages-item__img-wrap">
-              <img class="advantages-item__img" src="#">
-            </div>
+            <img class="advantages-item__img" src="#">
             <div class="advantages-item__title">Еда</div>
             <p class="advantages-item__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>  
           </div>
           <div class="advantages-item">
-            <div class="advantages-item__img-wrap">
-              <img class="advantages-item__img" src="#">
-            </div>
+            <img class="advantages-item__img" src="#">
             <div class="advantages-item__title">Сувениры</div>
             <p class="advantages-item__text">Не только китайского, но и местного производства!</p>  
           </div>
@@ -108,9 +100,9 @@
           </div>
           <p class="reason__text">Большинство едет в Гранд Каньон и толпится там.</p>
         </section>
-        <div class="text-block">
-          <div class="title-block__title">Заинтересовались?</div>
-          <p class="text-block__p">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <div class="promo">
+          <div class="promo__title">Заинтересовались?</div>
+          <p class="promo__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         </div>  
         <a class="search-hotel" href="#">Найти гостиницу</a>
         <div class="map"></div>
