--- a/form.html
+++ b/form.html
@@ -18,8 +18,8 @@
             <li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a>
             </li>
           </ul>
-         <div class="logo">
-          <a href="#"><img src="img/logo.png" width="138" height="70" alt="Седона"></a>
+          <div class="logo">
+            <a href="#"><img src="img/logo.png" width="138" height="70" alt="Седона"></a>
           </div>
         </nav>
         <div class="intro intro--bg-small-sedona">
@@ -32,7 +32,7 @@
           <p class="promo__text">
             Помогите нашим отелям стать лучше! Оставьте свой отзыв о них, а также о посещенных вами достопримечательностях
           </p>
-        </div>  
+        </div>
         <form class="form-review" id="review" class="review" action="#">
           <fieldset class="form-review__fieldset">
             <legend class="form-review__legend">Представьтесь, пожалуйста:</legend>
@@ -53,13 +53,15 @@
           </fieldset>
           <fieldset class="form-review__fieldset">
             <legend class="form-review__legend">Ваше общее впечатление:</legend>
-            <div class="impression-radio">
-              <input class="impression-radio__input" id="impression-positive" type="radio" name="impression" form="review" value="positive" checked>
-              <label class="impression-radio__label" for="impression-positive">Скорее положительное</label>
-            </div>
-            <div class="impression-radio">
-              <input class="impression-radio__input" id="impression-negative" type="radio" name="impression" form="review" value="negative">
-              <label class="impression-radio__label" for="impression-negative">Скорее отрицательное</label>
+            <div class="impression">
+              <div class="impression-radio">
+                <input class="impression-radio__input" id="impression-positive" type="radio" name="impression" form="review" value="positive" checked>
+                <label class="impression-radio__label" for="impression-positive">Скорее положительное</label>
+              </div>
+              <div class="impression-radio">
+                <input class="impression-radio__input" id="impression-negative" type="radio" name="impression" form="review" value="negative">
+                <label class="impression-radio__label" for="impression-negative">Скорее отрицательное</label>
+              </div>
             </div>
           </fieldset>
           <fieldset class="form-review__fieldset">
@@ -226,7 +228,7 @@
                 <img class="download__img" src="img/photo.png" alt="Фото" width="70" height="70">
                 <button class="download__btn  download__btn--close"></button>
               </div>
-            </div>
+            </div>            
           </fieldset>
           <input class="form-review__submit" type="submit" value="Отправить отзыв"></button>
         </form>
